HTB button mobile fixed

--- a/src/components/Navbar/newNav.css
+++ b/src/components/Navbar/newNav.css
@@ -129,7 +129,7 @@ nav {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	width: 300px;
+	width: 500px;
 	color: black;
 	background-color: transparent;
 	border: none;
